--- a/package.json
+++ b/package.json
@@ -67,5 +67,6 @@
     "scripts": {
         "build": "tsc -b",
         "watch": "tsc -w"
-    }
+    },
+    "updates": ["1. 新增1", "2. 新增2", "3. 新增3"]
 }
